@@ -140,6 +140,10 @@
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>sk.stuba.fiit.sporixx.Main</mainClass>
+                    <options>
+                        <option>--enable-native-access=javafx.graphics</option>
+                        <option>--enable-native-access=ALL-UNNAMED</option>
+                    </options>
                 </configuration>
             </plugin>
 
